--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="index.html#">Home</a></li>
                     <li><a href="https://www.linkedin.com/in/peytonlaudanski/" target="_blank">About Us (Me*)</a></li>
                     <li><a href="index.html#info">Campus Resources</a></li>
-                    <li><a href="contact.html" target="_blank">Contact Us</a></li>
+                    <li><a href="location.html" target="_blank">Department Info</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -103,7 +103,7 @@
             <ul>
                 <li><a href="index.html#">Home</a></li>
                 <li><a href="index.html#info">Campus Resources</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="location.html" target="_blank">Department Info</a></li>
                 <li><a href="https://www.linkedin.com/in/peytonlaudanski/" target="_blank">About Us (Me*)</a></li>
             </ul>
         </div>
