--- a/professor_info.html
+++ b/professor_info.html
@@ -84,6 +84,16 @@
         <p>© HackSU2025 - SUCA.</p>
     </div>
 </footer>
+    <script>
+        var navLinks = document.getElementById("navLinks");
+       
+        function showMenu(){
+            navLinks.style.right = "0";
+        }
+        function hideMenu(){
+            navLinks.style.right = "-200px";
+        }
+    </script>
 
 
 </body>
