--- a/location.html
+++ b/location.html
@@ -264,9 +264,26 @@
             </div>
         </div>
     </section>
-    <footer>
-        <p>© 2025 Office Hours @ SU</p>
-    </footer>
+    <footer class="footer">
+    <div class="footer-content">
+        <div class="footer-section" align="center">
+            <img src="https://upload.wikimedia.org/wikipedia/en/3/35/Seattle_University_seal.svg" alt="Logo" class="footer-logo">
+            <p>HackSU2025 - SUCA</p>
+        </div>
+        <div class="footer-section" align="center">
+            <h3>Quick Links</h3>
+            <ul>
+                <li><a href="index.html#">Home</a></li>
+                <li><a href="index.html#info">Campus Resources</a></li>
+                <li><a href="location.html" target="_blank">Department Info</a></li>
+                <li><a href="https://www.linkedin.com/in/peytonlaudanski/" target="_blank">About Us (Me*)</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <p>© HackSU2025 - SUCA</p>
+    </div>
+</footer>
 
     <script>
         var navLinks = document.getElementById("navLinks");
