--- a/location.html
+++ b/location.html
@@ -87,9 +87,10 @@
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html#">Home</a></li>
                     <li><a href="https://www.linkedin.com/in/peytonlaudanski/;">About Us (Me*)</a></li>
-                    <li><a href="index.html#info">Campus Resources</a></li><li><a href="location.html">Department Info</a></li>
+                    <li><a href="index.html#info">Campus Resources</a></li>
+                    <li><a href="location.html">Department Info</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -275,8 +276,8 @@
             <ul>
                 <li><a href="index.html#">Home</a></li>
                 <li><a href="index.html#info">Campus Resources</a></li>
-                <li><a href="location.html" target="_blank">Department Info</a></li>
-                <li><a href="https://www.linkedin.com/in/peytonlaudanski/" target="_blank">About Us (Me*)</a></li>
+                <li><a href="location.html"  >Department Info</a></li>
+                <li><a href="https://www.linkedin.com/in/peytonlaudanski/"  >About Us (Me*)</a></li>
             </ul>
         </div>
     </div>
