--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </a>
             </div>
             <div class="campus-col" style="background-image: url('https://www.usa.skanska.com/4a2f8c/siteassets/who-we-are/media/constructive-thinking/seattle-university/c-kevin-scott-c-kevin-scott-dsc01574-2-.jpg?height=686&amp;width=960'); background-position-x: 590px;">
-                <a href="school_events.html"  >
+                <a href="university_events.html"  >
                     <img src="https://i.ibb.co/3rQppqz/place3.jpg" alt="Section 3" style="opacity:0">
                     <div class="layer">
                         <h3>University Events</h3>
